@@ -1,3 +1,9 @@
+2009-01-30 20:59-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* PreferencePanes/NSPreferencePane.m: Remove checks for non-standard
+	Cocoa elements in the plist.  Also remove checks for things that
+	NSBundle itself checks for.
+
 2009-01-10 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* PreferencePanes/NSPreferencePane.m: Use infoDictionary of bundle
